welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not enough arguments for method lireCol1: (c: Array[java.awt.Color])Unit.
Unspecified value parameter c.
  lireCol1()
          ^Array1:10: error: not enough arguments for method avanceCol: (c: Array[java.awt.Color])Unit.
Unspecified value parameter c.
    avanceCol()
             ^